--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -28,12 +28,24 @@
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
-                        <separator alignment="center" id="fHM-rM-zom">
+                        <separator alignment="center" hidden="YES" id="fHM-rM-zom">
                             <color key="color" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                         </separator>
-                        <label height="35" alignment="center" text="Use Aim! To Boost Your Productivity!" textAlignment="center" numberOfLines="0" id="DLW-c8-80L">
-                            <fontDescription key="font" type="system" pointSize="12"/>
-                        </label>
+                        <group width="1" height="23" alignment="left" id="XIY-yQ-kuI">
+                            <items>
+                                <label width="70" alignment="left" verticalAlignment="center" text="3527.6" textAlignment="center" id="aUv-MC-XIt">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="19"/>
+                                </label>
+                                <separator alignment="center" verticalAlignment="center" id="pnK-IW-Sv9">
+                                    <color key="color" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </separator>
+                                <label width="70" alignment="right" verticalAlignment="center" text="153.5" textAlignment="center" id="oSc-0H-2Wz">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="19"/>
+                                </label>
+                            </items>
+                        </group>
                         <group width="1" height="60" alignment="center" id="XKG-ub-hko">
                             <items>
                                 <button width="0.5" height="60" alignment="left" title="Sessions" id="ZOT-Sz-ZnS">
@@ -54,6 +66,12 @@
                             <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
                     </items>
+                    <connections>
+                        <outlet property="toAwardsButton" destination="tvU-5d-t87" id="hJS-O4-1r6"/>
+                        <outlet property="toSessionsButton" destination="ZOT-Sz-ZnS" id="4QD-bB-KnV"/>
+                        <outlet property="userHourSumLabel" destination="oSc-0H-2Wz" id="T85-In-YyF"/>
+                        <outlet property="userTokenSumLabel" destination="aUv-MC-XIt" id="pih-26-uhA"/>
+                    </connections>
                 </controller>
             </objects>
             <point key="canvasLocation" x="34" y="45.769230769230774"/>
@@ -76,40 +94,6 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="455" y="-106"/>
-        </scene>
-        <!--Interface Controller-->
-        <scene sceneID="Hxe-QF-jGb">
-            <objects>
-                <controller id="l1H-L2-trl">
-                    <items>
-                        <group width="1" alignment="left" layout="vertical" id="Rny-vL-dRZ">
-                            <items>
-                                <label alignment="center" text="Resume" textAlignment="center" id="Fz4-si-rgN">
-                                    <color key="textColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </label>
-                                <button width="1" height="35" alignment="center" title="Previous Sessions" id="DzU-Sh-xTQ">
-                                    <fontDescription key="font" type="system" pointSize="14"/>
-                                </button>
-                            </items>
-                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
-                        </group>
-                        <group width="1" alignment="left" layout="vertical" spacing="2" id="CIk-e7-mKM">
-                            <items>
-                                <label width="0.94999999999999996" alignment="center" text="Select A Duration" textAlignment="center" numberOfLines="0" id="IB0-4T-qF5">
-                                    <color key="textColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="font" type="system" pointSize="16"/>
-                                </label>
-                                <button width="1" height="27" alignment="center" title="25-Minute" id="BGQ-LU-ORa"/>
-                                <button width="1" height="27" alignment="center" title="60-Minute" id="nWm-Cd-umE"/>
-                                <button width="1" height="27" alignment="center" title="Customize" id="TbK-X3-UCy"/>
-                                <button width="1" height="27" alignment="center" title="Endless!" id="ppR-ft-1Nw"/>
-                            </items>
-                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
-                        </group>
-                    </items>
-                </controller>
-            </objects>
-            <point key="canvasLocation" x="615" y="479"/>
         </scene>
         <!--Aim Main Session Selection Interface Controller-->
         <scene sceneID="4me-pA-pFC">
@@ -180,49 +164,64 @@
                             </items>
                             <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
-                        <group width="1" height="1" alignment="left" id="YSV-5G-WH9">
+                        <group width="155" height="18" alignment="left" id="mh3-ea-F5i">
                             <items>
-                                <timer alignment="center" textAlignment="center" minimumScaleFactor="0.69999999999999996" previewedSeconds="1347" id="8D6-G6-Ta6">
+                                <label alignment="right" text="0.0" id="OcH-1c-TMi">
                                     <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="37"/>
-                                    <calendarUnit key="units" minute="YES" second="YES"/>
-                                </timer>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="17"/>
+                                </label>
+                            </items>
+                        </group>
+                        <group width="1" alignment="left" verticalAlignment="center" id="YSV-5G-WH9">
+                            <items>
+                                <label alignment="center" verticalAlignment="center" text="00:00" textAlignment="center" id="Afs-Au-4rx">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="27"/>
+                                </label>
+                            </items>
+                        </group>
+                        <group width="1" alignment="center" verticalAlignment="bottom" id="pHS-hp-9gi">
+                            <items>
+                                <button width="1" widthAdjustment="-17" alignment="center" verticalAlignment="center" title="Terminate" id="jYG-IX-IrH">
+                                    <color key="titleColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="15"/>
+                                </button>
                             </items>
                         </group>
                     </items>
                     <connections>
-                        <outlet property="sessionTimer" destination="8D6-G6-Ta6" id="VSZ-xp-Z96"/>
+                        <outlet property="sessionTimerLabel" destination="Afs-Au-4rx" id="eob-7v-7Vm"/>
                         <outlet property="sessionTitleLabel" destination="mP7-qS-pkk" id="sRP-xN-ewM"/>
+                        <outlet property="sessionTokensLabel" destination="OcH-1c-TMi" id="hSB-c1-qeq"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="717" y="156"/>
+            <point key="canvasLocation" x="716.61538461538464" y="155.61538461538461"/>
         </scene>
         <!--Static Interface-->
         <scene sceneID="AEw-b0-oYE">
             <objects>
-                <notificationController id="YCC-NB-fut" userLabel="Static Interface">
+                <notificationController animationDuration="1" id="YCC-NB-fut" userLabel="Static Interface">
                     <items>
-                        <label alignment="left" text="Session Finished!" id="IdU-wH-bcW"/>
+                        <label alignment="left" text="Session Completed!" id="IdU-wH-bcW"/>
                     </items>
                     <notificationCategory key="notificationCategory" identifier="myCategory" id="JfB-70-Muf"/>
-                    <color key="backgroundColor" red="1" green="0.1843137255" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <edgeInsets key="margins" left="1" right="1" top="0.0" bottom="0.0"/>
                     <connections>
                         <outlet property="notificationAlertLabel" destination="IdU-wH-bcW" id="JKC-fr-R95"/>
-                        <segue destination="4sK-HA-Art" kind="relationship" relationship="dynamicNotificationInterface" id="kXh-Jw-8B1"/>
+                        <segue destination="3R2-e1-rLh" kind="relationship" relationship="dynamicNotificationInterface" id="YrH-6U-O5I"/>
                     </connections>
                 </notificationController>
             </objects>
             <point key="canvasLocation" x="47" y="574"/>
         </scene>
-        <!--Dynamic Interface-->
-        <scene sceneID="ZPc-GJ-vnh">
+        <!--Dynamic Notification Interface Controller-->
+        <scene sceneID="Eo4-41-kgx">
             <objects>
-                <controller id="4sK-HA-Art" userLabel="Dynamic Interface" customClass="NotificationController" customModule="Aim__" customModuleProvider="target">
-                    <color key="backgroundColor" red="1" green="0.1843137255" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                </controller>
+                <controller id="3R2-e1-rLh"/>
             </objects>
-            <point key="canvasLocation" x="295" y="574"/>
+            <point key="canvasLocation" x="347" y="574"/>
         </scene>
     </scenes>
 </document>
